Version 1.6.9
- BUG: the menu icons on XP were not shown correctly. (Stefan)
- BUG: the overlay icons could dissapear after upgrading from
       a previous version, a 'repair install' however would
       fix this issue. (Stefan)
- BUG: Urls with '#' in it were not escaped correctly. (Stefan)
- BUG: Ignoring directories with a dot and extension in the name
       didn't work. (Stefan)

Version 1.6.8
- BUG: Exporting via DnD from the repository browser could 
       create garbled paths if the urls of the files 
       required escaping. (Stefan)
- BUG: Properties loaded from a file were not changed or
       added without a manual edit of the loaded content. (Stefan)
- BUG: The /logmsg param wasn't used in the copy command. (Stefan)
- BUG: The /logmsg param wasn't used in the import command. (Stefan)
- BUG: The commonUrl and commonRoot parameters in the
       CheckCommit method of the IBugtraqProvider2 interface
       could return wrong paths/urls. (Stefan)
- BUG: Updating two items from different paths to get a sparse
       checkout didn't work. (Stefan)
- BUG: Handling of multi-page TIFF files in TortoiseIDiff could
       lead to a crash. (Stefan)
- BUG: When adding files failed, the error message was
       not shown. (Stefan)
- BUG: The return value for /command:commit was wrong. (Stefan Fuhrmann)
- BUG: Adjusting the case of filenames could lead to those
       files getting deleted instead of fixed. (Stefan)
- BUG: When right-dragging and copying files over already existing
       files, an empty error dialog was shown 
       in case of success. (Stefan)
- CHG: Various adjustments for Windows 7. (Stefan)
- CHG: The "show excluded folders as normal" setting is
       changed to false by default. (Stefan)
- CHG: On W2k, don't update to incompatible (future) TSVN versions. 
       (Stefan Fuhrmann)

Version 1.6.7
- BUG: The status cache could segfault in some situations. (Stefan)
- BUG: Memory leak in SubWCRevCOM. (Stefan)